# uploat

./: Cargo.toml  README.md
res/: index.html
src/: main.rs
